--- a/Develop/assets/index.html
+++ b/Develop/assets/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
+        <!--added style reset  -->
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
